Fix overflow of navbar-toggle

--- a/thinkhazard/static/less/common.less
+++ b/thinkhazard/static/less/common.less
@@ -173,6 +173,9 @@ ul.horizontal li {
   .navbar-nav .divider-vertical {
     display: none;
   }
+  .navbar-toggle {
+    z-index: 1;
+  }
   .hazard-types-list {
     li {
       position: static;
